--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,6 @@
-<ifModule mod_rewrite.c>
-    RewriteEngine On
-  RewriteBase /
-  RewriteRule ^index\.html$ - [L]
-  RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteRule . /index.html [L]
+<ifModule 
+RewriteEngine On  
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^(.*)$ index.html?q=$1 [L,QSA]
 </ifModule>
